# httpServer

./: .gitignore  CMakeLists.txt  CMakePresets.json  HttpServer-King.cpp  README.md  build.sh  httpServer.cpp  httplib.h  json.h  main.cpp  server  server.txt
CppServer/: CppServer.vcxproj  httplib.h  main.cpp
CppServer/x64/: Google.html  index.html  tests.html
CppServer/x64/Debug/: vc143.idb
CppServer/x64/Debug/CppServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.command.1.tlog  link.read.1.tlog  rc.command.1.tlog
CppServer/x64/Google_files/: m=aLUfP  m=cdos,hsm,jsa,mb4ZUb,cEt90b,SNUn3,qddgKe,sTsDMc,dtl0hd,eHDfl,YV5bee,d,csi  m=cdos,hsm,jsa,mb4ZUb,cEt90b,SNUn3,qddgKe,sTsDMc,dtl0hd,eHDfl,YV5bee,d,csi(1)  m=lOO0Vd,sy8p,P6sQOc  m=sy2vw,Ix7YEd,sy1c0,nqQ5fe,sy2vx,syzv,dp6JMc  m=sy4ff,sy4fe,sy2vy,HFecgf,sy2w3,sy2w2,sy2w1,sy2w0,sy2vz,FZSjO,sy4fq,sy4fz,sy4dy,sy4dt,sy4du,sy4dq,sy3gv,sy4fx,sy4fw,sy334,syu9,HK6Tmb,sy4g7,sy4g1,sy39y,syts,Jlf2lc  m=sysb,XCToU,syse,sysd,VsqSCc,sy1bs,P10Owf,sy1ai,sy1ag,gSZvdb,syzp,WlNQGd,syr2,syqz,syqy,syqw,DPreE,sy100,syzz,nabPbb,syzk,syzi,syjt,syni,CnSW2d,kQvlef,syzy,fXO0xe  rs=AA2YrTt0d-Ss5kisT1M_8rsOzCdvCZrVWg
CsServer/: CsServer.csproj  Program.cs
HttpServerSrc-King/: CMakeLists.txt  Common.hpp  HttpServer.cpp  HttpServer.hpp  WebSocket.hpp
HttpServerSrc-King/util/: Base64.hpp  HttpMethod.hpp  MimeType.hpp
HttpServer_dimmed-King/: CMakeLists.txt  HttpServer_dimmed-King.cpp
